fixed the layout shifting problem

--- a/art-gallery.css
+++ b/art-gallery.css
@@ -11,13 +11,13 @@
 .green-background {
   position: absolute;
   z-index: -2;
-  min-width: 100%;
+  max-width: 100%;
   height: 240dvh;
   object-fit: cover;
 }
 
 .container {
-  width: 100%;
+  max-width: 100%;
   margin-left: 29px;
 }
 
@@ -35,7 +35,8 @@
 }
 
 .art img {
-  width: 84%;
+  width: 100%;
+  max-width: 84%;
   height: 100%;
   object-fit: cover;
   border: 10px solid white;
@@ -93,8 +94,9 @@
 }
 
 .line-divider img{
-  width: 125%;
-  margin-top: -5rem;
+  width: 100%;
+  max-width: 94.8rem;
+  margin-top: -3.5rem;
   transform: rotate(2deg);
   overflow: visible;
 }
