--- a/first-page.css
+++ b/first-page.css
@@ -9,7 +9,6 @@ body {
   width: 100%;
   height: 200dvh;
   position: relative;
-  overflow-x: hidden;
 }
 
 .front-page {
@@ -31,7 +30,7 @@ body {
 
 .front-page .gab-picture {
   position: absolute;
-  width: 32%;
+  max-width: 31rem;
   bottom: 0;
 }
 
@@ -62,7 +61,7 @@ body {
 .heart-1 {
   position: absolute;
   left: 5rem;
-  width: 12%;
+  max-width: 12rem;
   bottom: 18rem;
   z-index: -1;
   animation: vibrate-1 2.9s linear infinite both;
@@ -72,7 +71,7 @@ body {
 .spiral {
   position: absolute;
   left: 27rem;
-  width: 8%;
+  max-width: 8rem;
   bottom: 35rem;
   z-index: -1;
   animation: vibrate-1 2.5s linear infinite both;
@@ -82,7 +81,7 @@ body {
 .smiley {
   position: absolute;
   right: 5rem;
-  width: 9%;
+  max-width: 9rem;
   bottom: 25rem;
   z-index: -1;
   animation: vibrate-2 2.6s linear infinite both;
@@ -92,7 +91,7 @@ body {
 .heart-3 {
   position: absolute;
   right: 28rem;
-  width: 9%;
+  max-width: 9rem;
   bottom: 22.5rem;
   z-index: -1;
   animation: vibrate-2 2.8s linear infinite both;
@@ -102,7 +101,7 @@ body {
 .star {
   position: absolute;
   right: 20rem;
-  width: 10%;
+  max-width: 10rem;
   bottom: 37rem;
   z-index: -1;
   animation: vibrate-2 2.5s linear infinite both;
@@ -112,7 +111,7 @@ body {
 .heart-2 {
   position: absolute;
   right: 43rem;
-  width: 7%;
+  max-width: 7rem;
   bottom: 53rem;
   z-index: -1;
   animation: vibrate-1 3s linear infinite both;
@@ -203,42 +202,11 @@ body {
   opacity: 70%;
 }
 
-.clouds-before {
+.clouds img{
   position: absolute;
-  left: -10rem;
-  width: 50%;
+  max-width: 100%;
+  bottom: -4.5rem;
+  filter: blur(6px);
   z-index: 1;
-  bottom: 12rem;
-  filter: blur(7px);
-  opacity: 100%;
 }
 
-.clouds-before-2 {
-  position: absolute;
-  left: 12rem;
-  width: 45%;
-  z-index: 10;
-  bottom: 10rem;
-  filter: blur(7px);
-  opacity: 100%;
-}
-
-.clouds-before-3 {
-  position: absolute;
-  left: 33rem;
-  width: 50%;
-  z-index: 1;
-  bottom: 8rem;
-  filter: blur(7px);
-  opacity: 100%;
-}
-
-.clouds-before-4 {
-  position: absolute;
-  left: 60rem;
-  width: 50%;
-  z-index: 1;
-  bottom: 12rem;
-  filter: blur(7px);
-  opacity: 100%;
-}
