--- a/last-page.css
+++ b/last-page.css
@@ -1,6 +1,6 @@
 .fourth-page {
   width: 100%;
-  height: 45dvh;
+  height: 40dvh;
   background-color: #68b1af;
   overflow: hidden;
 }
@@ -17,7 +17,7 @@
   font-size: 3.6rem;
   margin-right: 6rem;
   margin-top: 3.7rem;
-  line-height: 5.9rem;
+  line-height: 5rem;
 }
 
 .dev {
@@ -38,7 +38,7 @@
   color: white;
   font-weight: 600;
   font-size: 1.5rem;
-  margin-top: 1.8rem;
+  margin-top: 1.5rem;
   text-decoration: none;
 }
 
@@ -50,12 +50,12 @@
 
 .white-flower {
   position: relative;
-  bottom: 11rem;
+  bottom: 13rem;
   left: -2rem;
 }
 
 .white-flower img{
-  width: 88%;
+  max-width: 88rem;
   mix-blend-mode: screen;
   object-fit: cover;
 }
